// PiQApi.ArchitectureRules/Projects/PiQApi.Abstractions/Diagrams/CoreContracts.puml
@startuml PiQApi.Abstractions Core Contracts

title PiQApi.Abstractions Core Contracts
footer Generated from architectural guides - %date("yyyy.MM.dd")
legend right
  Core interface relationships and
  framework contracts
end legend

' Visual styling
skinparam componentStyle uml2
skinparam interface {
  BackgroundColor White
  BorderColor Black
}

' Core Result Types
interface IPiQResult {
  +bool IsSuccess
  +IResultError? Error
}

interface "IPiQResult<T>" as IPiQResultT {
  +T? Value
}

interface IResultError {
  +string Code
  +string Message
  +string CorrelationId
  +ValidationSeverityType Severity
  +IReadOnlyDictionary<string,object> Context
}

IPiQResultT --|> IPiQResult

' Validation Contracts
interface "IValidationRule<T>" as IValidationRule {
  +Task<PiQValidationResult> ValidateAsync()
}

interface "IValidationRuleSet<T>" as IValidationRuleSet {
  +IReadOnlyCollection<IValidationRule<T>> GetRules()
}

interface IValidationProcessor {
  +Task<PiQValidationResult> ValidateAsync<T>()
}

class PiQValidationContext {
  +ValidationModeType Mode
  +PiQCorrelationId Id
  +IReadOnlyDictionary<string,object> Properties
}

class PiQValidationResult {
  +bool IsValid
  +IReadOnlyCollection<ValidationError> Errors
  +string CorrelationId
  +ValidationSeverityType Severity
}

IValidationRule ..> PiQValidationResult : creates
IValidationRule ..> PiQValidationContext : uses
IValidationProcessor ..> IValidationRule : executes
IValidationProcessor ..> IValidationRuleSet : executes
IValidationRuleSet *-- IValidationRule : contains

' Context Types
interface ICorrelationContext {
  +PiQCorrelationId Id
  +DateTimeOffset Timestamp
}

interface IOperationContext {
  +PiQOperationId Id
  +PiQCorrelationId CorrelationId
  +IDictionary<string,object> Properties
}

' Factory Contracts
interface "IResultFactory" as IResultFactory {
  +IPiQResult<T> Success<T>()
  +IPiQResult<T> Failure<T>()
  +IPiQResult<T> FromValidationResult<T>()
}

IResultFactory ..> IPiQResult : creates
IResultFactory ..> IPiQResultT : creates

@enduml
